/*
 * Copyright 2019, TeamDev. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.event;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.event.model";
option java_outer_classname = "ModelEventsProto";
option java_multiple_files = true;

import "spine/time/time.proto";
import "spine/people/person_name.proto";

import "spine/test/event/model/conference.proto";

message ConferenceAnnounced {
    Conference conference = 1;
    time.LocalDate date = 2 [(required) = true];
    string location = 3;
}

message SpeakersInvited {
    Conference conference = 1;
    time.LocalDate deadline = 2 [(required) = true];
}

message SpeakerJoined {
    Conference conference = 1;
    people.PersonName speaker = 2 [(required) = true];
}

message TalkSubmissionRequested {
    people.PersonName speaker = 1;
    Conference conference = 2 [(required) = true];
    time.LocalDate deadline = 3 [(required) = true];
}

message TalkSubmitted {
    Conference conference = 1;
    people.PersonName speaker = 2 [(required) = true];
}
